car-part-core-micro/kubernetes/car-core-micro.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: car-core-micro-deployment
  labels:
    app: title
spec:
  replicas: 1
  selector:
    matchLabels:
      app: car-core-micro
  template:
    metadata:
      labels:
        app: car-core-micro
    spec:
      containers:
        - name: car-core-micro-container
          image: ginitoru/car-core-micro:9
          ports:
            - containerPort: 9090
              protocol: TCP
          livenessProbe:
            httpGet:
              port: 9090
              path: /actuator/health/liveness
            initialDelaySeconds: 30
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: car-core-micro-service
spec:
  selector:
    app: car-core-micro
  ports:
    - port: 9090
      protocol: TCP
      targetPort: 9090
  type: LoadBalancer
