car-part-core-micro/kubernetes/keycloak.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: keycloak
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:18.0
          args: ["start-dev"]
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /realms/master
              port: 8080
          command: ["/opt/keycloak/bin/kc.sh"]

---
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: keycloak
#spec:
#  tls:
#    - hosts:
#        - keycloak.local
#  rules:
#    - host: keycloak.local
#      http:
#        paths:
#          - path: /
#            pathType: Prefix
#            backend:
#              service:
#                name: keycloak
#                port:
#                  number: 8080
