car-part-core-micro/kubernetes/core-micro-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: car-core-micro-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: car.core.ro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: car-core-micro-service
                port:
                  number: 9090

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: car-front-micro-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: car.front.ro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: car-front-service
                port:
                  number: 9091

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: keycloak.ro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
